--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
 
           <div class="change">
-            <a href="https://www.facebook.com" class="change-link">Change</a>
+            <a href="#" class="change-link">Change</a>
           </div>
         </div>
 
